# mini-vllm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.cuda  Dockerfile.essentials  Dockerfile.fast  Dockerfile.server  Makefile  README.md  expected_logs  methodology.md  pyproject.toml  requirements.txt  setup.py  status.txt  tmpclaude-fdd0-cwd
csrc/: ops.h  torch_bindings.cpp
deploy/: README.md
deploy/aws/: credentials.example.sh  env.sh
deploy/k8s/: mini-vllm-tp2.yaml  mini-vllm-tp4.yaml  mini-vllm-tp8.yaml
deploy/scripts/: benchmark.sh  build.sh  deploy.sh  generate-manifests.sh  local-test.sh  monitor.sh  quickpatch.sh  setup-ecr.sh  status.sh
mini_vllm/: __init__.py  __main__.py  launcher.sh
mini_vllm/attention/: __init__.py  attention.py
mini_vllm/csrc/: ops.h  torch_bindings.cpp
mini_vllm/distributed/: __init__.py  parallel_state.py
mini_vllm/engine/: __init__.py  kv_cache.py  llm_engine.py
mini_vllm/entrypoints/: __init__.py  api_server.py
mini_vllm/layers/: __init__.py  layernorm.py  linear.py  rotary_embedding.py  vocab_embedding.py
mini_vllm/layers/fused_moe/: __init__.py  fused_moe.py  layer.py  triton_moe.py
mini_vllm/layers/quantization/: __init__.py  mxfp4.py
mini_vllm/loader/: __init__.py  weight_loader.py
mini_vllm/models/: __init__.py  gpt_oss.py
mini_vllm/ops/: __init__.py
requirements/: build.txt  common.txt  cuda.txt
vllm/: __init__.py  _aiter_ops.py  _custom_ops.py  beam_search.py  outputs.py
vllm/attention/backends/: registry.py
vllm/attention/ops/: chunked_prefill_paged_decode.py
vllm/benchmarks/: datasets.py
vllm/config/: __init__.py  model.py  parallel.py  vllm.py
vllm/distributed/device_communicators/: shm_object_storage.py
vllm/distributed/kv_transfer/kv_connector/v1/lmcache_integration/: utils.py  vllm_v1_adapter.py
vllm/engine/: arg_utils.py
vllm/entrypoints/: chat_utils.py  llm.py
vllm/entrypoints/cli/: main.py
vllm/entrypoints/openai/: api_server.py  run_batch.py  serving_engine.py
vllm/entrypoints/serve/: __init__.py
vllm/entrypoints/serve/lora/: api_router.py
vllm/inputs/: data.py  preprocess.py
vllm/lora/: __init__.py  layers.py  request.py  resolver.py  utils.py
vllm/model_executor/layers/: kda.py  utils.py
vllm/model_executor/layers/quantization/: __init__.py
vllm/model_executor/layers/quantization/utils/: mxfp4_utils.py  w8a8_utils.py
vllm/model_executor/model_loader/: default_loader.py  weight_utils.py
vllm/model_executor/models/: interfaces.py  registry.py  utils.py
vllm/plugins/io_processors/: interface.py
vllm/plugins/lora_resolvers/: __init__.py
vllm/transformers_utils/: config.py
vllm/transformers_utils/processors/: ovis.py
vllm/utils/: jsontree.py  system_utils.py
vllm/v1/: request.py  serial_utils.py  utils.py
vllm/v1/core/: encoder_cache_manager.py
vllm/v1/core/sched/: interface.py  output.py  scheduler.py
vllm/v1/engine/: __init__.py  async_llm.py  core.py  core_client.py  input_processor.py  llm_engine.py  utils.py
vllm/v1/executor/: abstract.py
vllm/v1/metrics/: loggers.py  ray_wrappers.py  stats.py
vllm/v1/spec_decode/: __init__.py  eagle.py  medusa.py  metadata.py  metrics.py  ngram_proposer.py  suffix_decoding.py  utils.py
vllm/v1/worker/: gpu_input_batch.py  gpu_model_runner.py  lora_model_runner_mixin.py  utils.py  worker_base.py
vllm/v1/worker/gpu/spec_decode/: __init__.py  rejection_sample.py
